# mkdocs_strapi_plugin

./: README.md
mkdocs_strapi_plugin/: .travis.yml  Makefile  setup.cfg  setup.py  tox.ini
mkdocs_strapi_plugin/.github/: ISSUE_TEMPLATE.md
mkdocs_strapi_plugin/docs/: make.bat
