[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:mkdocs_strapi_plugin/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[bdist_wheel]
universal=1

[metadata]
description-file = README.md

[options]
packages = find:
install_requires =
    requests
    pandas
    numpy
    matplotlib
    seaborn
    scikit-learn
    mkdocs
    mkdocs-material
    mkdocs-strapi-plugin
include_package_data = True

[options.packages.find]
exclude =
    tests
    docs
    AUTHORS.rst